--- a/index.html
+++ b/index.html
@@ -2,11 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="J. Karikol Raja - Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
-    <meta name="theme-color" content="#060d18" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Primary Meta Tags -->
     <title>J. Karikol Raja | Software Developer</title>
+    <meta name="title" content="J. Karikol Raja | Software Developer" />
+    <meta name="description" content="J. Karikol Raja - Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
+    <meta name="author" content="J. Karikol Raja" />
+    <meta name="theme-color" content="#060d18" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="J. Karikol Raja | Software Developer" />
+    <meta property="og:description" content="Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
+    <meta property="og:image" content="/favicon.svg" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="J. Karikol Raja | Software Developer" />
+    <meta name="twitter:description" content="Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
+    <meta name="twitter:image" content="/favicon.svg" />
+
+    <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Fira+Code:wght@400;500;600&display=swap" rel="stylesheet" />
   </head>
   <body>
