feat: enhance SEO, accessibility, and performance; update favicon, meta tags, and structured data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <!-- Primary Meta Tags -->
     <title>J. Karikol Raja | Software Developer</title>
@@ -13,21 +14,55 @@
     <meta name="description" content="J. Karikol Raja - Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
     <meta name="author" content="J. Karikol Raja" />
     <meta name="theme-color" content="#060d18" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://karikolraja.online/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://karikolraja.online" />
     <meta property="og:title" content="J. Karikol Raja | Software Developer" />
     <meta property="og:description" content="Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
-    <meta property="og:image" content="/favicon.svg" />
+    <meta property="og:image" content="https://karikolraja.online/og-image.png" />
 
     <!-- Twitter -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://karikolraja.online" />
     <meta name="twitter:title" content="J. Karikol Raja | Software Developer" />
     <meta name="twitter:description" content="Junior Software Developer portfolio. Building modern web applications with Java, React, Next.js and more." />
-    <meta name="twitter:image" content="/favicon.svg" />
+    <meta name="twitter:image" content="https://karikolraja.online/og-image.png" />
 
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&family=Fira+Code:wght@400;500;600&display=swap" rel="stylesheet" />
+    <!-- Fonts: preconnect + non-render-blocking -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code:wght@400;500&display=swap"
+      rel="stylesheet"
+      media="print"
+      onload="this.media='all'"
+    />
+    <noscript>
+      <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Fira+Code:wght@400;500&display=swap" rel="stylesheet" />
+    </noscript>
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "J. Karikol Raja",
+      "jobTitle": "Junior Software Developer",
+      "worksFor": {
+        "@type": "Organization",
+        "name": "Skillmine Technology Consulting"
+      },
+      "url": "https://karikolraja.online",
+      "sameAs": [
+        "https://www.linkedin.com/in/j-karikol-raja-018292219",
+        "https://github.com/karikol2310"
+      ],
+      "knowsAbout": ["React", "Next.js", "TypeScript", "NestJS", "MongoDB", "Node.js", "JavaScript"]
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
